--- a/client/src/components/ApplicationLayout/ApplicationLayout.module.scss
+++ b/client/src/components/ApplicationLayout/ApplicationLayout.module.scss
@@ -4,9 +4,8 @@
   grid-template-rows: auto 1fr;
 
   .container {
-    max-width: 74rem;
-    width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
